fix: Text overlaps view chapter button in some cases

--- a/src/frontend/src/pages/DescriptionCourse/DescriptionCourse.scss
+++ b/src/frontend/src/pages/DescriptionCourse/DescriptionCourse.scss
@@ -152,11 +152,12 @@
         }
 
         &-view__chapter {
+          box-sizing: border-box;
           background: transparent;
           outline: none;
           border: 1px solid $secondary2;
           border-radius: 3px;
-          margin-top: -5px;
+          margin-top: 5px;
           float: right;
           padding: 3px 5px;
           color: $primary;
